--- a/SoftalkCalendar.csproj
+++ b/SoftalkCalendar.csproj
@@ -177,7 +177,11 @@
   </Target>
   <PropertyGroup>
     <PreBuildEvent>
-    </PreBuildEvent>
+</PreBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
